RECOMMEND-1 : Initial work
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-recommendation@70227 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/recommendation/resources/recommendation_messages_en.properties
+++ b/src/java/fr/paris/lutece/plugins/recommendation/resources/recommendation_messages_en.properties
@@ -1,4 +1,4 @@
 # Plugin's keys
-plugin.provider=Mairie de Paris
-plugin.description=Provides recommendation using Apache Mahout 
+plugin.provider=City of Paris
+plugin.description=Provides recommendations based on machine learning library Apache Mahout 
 
