--- a/src/java/fr/paris/lutece/plugins/recommendation/resources/recommendation_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/recommendation/resources/recommendation_messages_fr.properties
@@ -1,4 +1,4 @@
 # Plugin's keys
 plugin.provider=Mairie de Paris
-plugin.description=Provides recommendation using Apache Mahout 
+plugin.description=Recommandations bas\u00e9es sur les algorithmes d'apprentissage automatique (machine learning) du projet Apache Mahout 
 
